--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "datasets>=3.5.1",
     "evaluate>=0.4.3",
+    "matplotlib>=3.10.1",
     "peft>=0.15.2",
     "scikit-learn>=1.6.1",
     "torch>=2.7.0",
